Fix crts video on safari and other minor improvements

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,14 @@ body {
   /* links */
   a {
     color: var(--color-links);
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+  }
+
+  a:hover {
+    filter: brightness(1.2);
+    text-decoration: underline;
+    text-underline-offset: 2px;
   }
 }
 
